<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dialogBoxBackground"
    android:id="@+id/myDetailedItemFragment"
    android:clickable="true"
    tools:context="com.scu.tausch.Activities.DetailedItemFragment">

    <TextView
        android:id="@+id/item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="30dp"
        android:textColor="@color/categoryStripes"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:text="Title"
        />

    <LinearLayout
        android:id="@+id/imagesLayout"
        android:layout_below="@+id/item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/arrow_left"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:layout_toLeftOf="@+id/item_image"
            android:src="@mipmap/arrow_left" />

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@mipmap/item_placeholder"
        android:layout_centerHorizontal="true"
        />

        <ImageView
            android:id="@+id/arrow_right"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:layout_toRightOf="@+id/item_image"
            android:src="@mipmap/arrow_right" />


    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollview_item_description"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:layout_below="@+id/imagesLayout"
        android:layout_gravity="center" >
        <TextView
            android:id="@+id/item_description"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:gravity="center_horizontal"
            android:textSize="15dp"
            android:textColor="@color/categoryStripes"
            android:text="@string/dummy_text" />

    </ScrollView>

    <LinearLayout
        android:id="@+id/layout_contact_name"
        android:layout_below="@id/scrollview_item_description"
        android:orientation="horizontal"
        android:layout_marginLeft="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tag_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/categoryStripes"
            android:gravity="center_horizontal"
            android:text="@string/key_contact"
            />

        <TextView
            android:id="@+id/value_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/categoryStripes"
            android:gravity="center_horizontal"
            android:text="John"
            />


        <ImageButton
            android:id="@+id/icon_message_box"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_marginLeft="6dp"
            android:background="@mipmap/icon_message_chat"
            android:layout_gravity="center_vertical"
            android:layout_centerHorizontal="true"
            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_city"
        android:layout_below="@id/layout_contact_name"
        android:orientation="horizontal"
        android:layout_marginLeft="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tag_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/categoryStripes"
            android:gravity="center_horizontal"
            android:text="@string/key_city"
            />

        <TextView
            android:id="@+id/value_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/categoryStripes"
            android:gravity="center_horizontal"
            android:text="Santa Clara"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_contact_price"
        android:layout_below="@id/layout_city"
        android:orientation="horizontal"
        android:layout_marginLeft="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tag_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/categoryStripes"
            android:gravity="center_horizontal"
            android:text="@string/key_price"
            />

        <TextView
            android:id="@+id/value_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/categoryStripes"
            android:gravity="center_horizontal"
            android:text="$50"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_contact_condition"
        android:layout_below="@id/layout_contact_price"
        android:orientation="horizontal"
        android:layout_marginLeft="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tag_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/categoryStripes"
            android:gravity="center_horizontal"
            android:text="@string/key_condition"
            />

        <TextView
            android:id="@+id/value_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/categoryStripes"
            android:gravity="center_horizontal"
            android:text="Used"
            />


    </LinearLayout>


</RelativeLayout>